@@ -475,7 +475,7 @@ bayesglm.fit <- function (x, y, weights = rep(1, nobs), start = NULL,
 
 
 setMethod("print", signature(x = "bayesglm"), 
-    function(x, digits= getOption("digits")) display(object=x, digits=digits))
+    function(x, digits=2) display(object=x, digits=digits))
 
 setMethod("show", signature(object = "bayesglm"), 
-    function(object) display(object, digits=getOption("digits")))
+    function(object) display(object, digits=2))
